Update and rename index.md to index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-## Welcome to Jacob Knight Tuition
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Jacob Knight tuition</title>
         <style>
         .parallax {
           background-color: #000;
@@ -13,6 +13,9 @@
         }
        </style>
     </head>
+   
+    
+  <h1> Jaco Knight Tution </h1>  
   <div class="container parallax">
     <div class="row">
       <div class="col-sm">
